methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: value Red is not a member of object java.awt.Color
  var L:Array[Color]=(Color.yellow,Color.Red,Color.blue,Color.green) 
                                         ^